objects/GenAIGeneration__dll.object
<CustomObject>
    <fields>
        <fullName>KQ_generationId__c</fullName>
        <label>KQ_generationId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_generationResponseId__c</fullName>
        <label>KQ_generationResponseId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloud__c</fullName>
        <label>cloud</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feature__c</fullName>
        <label>feature</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>generationId__c</fullName>
        <label>generationId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>generationResponseId__c</fullName>
        <label>generationResponseId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maskedResponseText__c</fullName>
        <label>maskedResponseText</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orgId__c</fullName>
        <label>orgId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>responseParameters__c</fullName>
        <label>responseParameters</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>responseText__c</fullName>
        <label>responseText</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>timestamp__c</fullName>
        <label>timestamp</label>
        <type>DateTime</type>
    </fields>
</CustomObject>